fix codes,add Dockerfile and edit docker compose, change project name.